# yolo-v2-gpu-wrapper

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
code/: CMakeCache.txt  Makefile  avgpool_layer_kernels.cu  blas_kernels.cu  cmake_install.cmake  coco.cpp  col2im_kernels.cu  cuda.cpp  demo.h  maxpool_layer_kernels.cu  network_kernels.cu  out.csv
src/: CMakeLists.txt  activation_kernels.cu  convolutional_kernels.cu  crop_layer_kernels.cu  deconvolutional_kernels.cu  dropout_layer_kernels.cu  im2col_kernels.cu  yolo.h
