CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(StandaloneYOLOWrapper)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -v -ffast-math -funroll-loops -O3 -mavx -omp")
SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
SET(CUDA_SEPARABLE_COMPILATION OFF)
LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_35;-std=c++11")

FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

ADD_DEFINITIONS(-DGPU)

CUDA_INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(code)

FILE(GLOB SOURCES "code/*.cu" "code/*.cpp" "code/*.c" "code/*.h")
FILE(GLOB CUDA_ALL_SOS "${CUDA_TOOLKIT_ROOT_DIR}/lib64/*.so")
CUDA_ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} ${CUDA_ALL_SOS})

# ADD_EXECUTABLE(runrun Main.cpp)
# TARGET_LINK_LIBRARIES(runrun ${OpenCV_LIBS} /home/ahmedfawzyelaraby/Thesis_WS/Code/YOLO_Standalone_Wrapper/liblbmslv.so)