CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(yolo-v2-gpu-wrapper)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -v -ffast-math -funroll-loops -O3 -mavx -omp")
SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
SET(CUDA_SEPARABLE_COMPILATION OFF)
LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_35;-std=c++11")

FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

ADD_DEFINITIONS(-DGPU)

CUDA_INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
CUDA_INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

FILE(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cu" "${PROJECT_SOURCE_DIR}/src/*.cpp" "${PROJECT_SOURCE_DIR}/src/*.c" "${PROJECT_SOURCE_DIR}/src/*.h")
FILE(GLOB CUDA_ALL_SOS "${CUDA_TOOLKIT_ROOT_DIR}/lib64/*.so")
CUDA_ADD_LIBRARY(YOLOGPUWrapper SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(YOLOGPUWrapper ${OpenCV_LIBS} ${CUDA_ALL_SOS})

FILE(GLOB HEADERS "${PROJECT_SOURCE_DIR}/src/*.h")
INSTALL(FILES ${HEADERS} DESTINATION /usr/local/include/yolo-v2-gpu-wrapper)
INSTALL(TARGETS YOLOGPUWrapper DESTINATION /usr/local/lib)
